--- a/styles/styles.css
+++ b/styles/styles.css
@@ -281,13 +281,21 @@ body {
   justify-content: space-between;
 }
 
+.activities-list-item:hover {
+  color: #4e3487;
+  cursor: pointer;
+}
+
+/* .activities-list-item:hover {
+  padding-left: 10px;
+} */
+
 .activities-col {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 40px 80px 40px 40px;
   gap: 10px;
-  width: 680px;
   height: 249px;
   background: #f6f6f6;
   box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.2);
@@ -296,11 +304,11 @@ body {
 
 .activities-left-col {
   margin-right: 20px;
-  width: 680px;
+  width: 66%;
 }
 
 .activities-right-col {
-  width: 480px;
+  width: 34%;
 }
 
 .lists-block-left {
@@ -325,8 +333,10 @@ body {
 
 .find-spec-wrap {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   margin-bottom: 80px;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .purple-step {
@@ -347,14 +357,13 @@ body {
   color: #ffffff;
 }
 .find-spec-step {
-  align-items: flex-start;
   padding: 200px 80px 40px 40px;
-  gap: 10px;
   background: #f6f6f6;
   box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  width: 33.3333%;
-  margin-right: 20px;
+  width: 32%;
+  box-sizing: border-box;
+  margin-bottom: 20px;
   position: relative;
   overflow: hidden;
 }
@@ -489,6 +498,13 @@ body {
   margin-bottom: 20px;
 }
 
+.industries-block:hover .industries-block-title {
+  color: #4e3487;
+}
+.industries-block:hover .icon-arrow-right::before {
+  color: #4e3487;
+}
+
 .industries-block-title {
   font-weight: 700;
   font-size: 32px;
@@ -515,6 +531,8 @@ body {
 }
 
 /*-------END INDUSTRIES BLOCK -------*/
+
+/*------- VACANCIES BLOCK -------*/
 
 .find-vacancies {
   margin-top: 80px;
@@ -561,3 +579,5 @@ body {
   background-size: cover;
   border-radius: 10px;
 }
+
+/*-------END VACANCIES BLOCK -------*/
