--- a/styles/antalicons.css
+++ b/styles/antalicons.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "icomoon";
-  src: url("../iconfonts/fonts/icomoon.eot?p9oo47");
-  src: url("../iconfonts/fonts/icomoon.eot?p9oo47#iefix")
+  src: url("../iconfonts/fonts/icomoon.eot?cd2t42");
+  src: url("../iconfonts/fonts/icomoon.eot?cd2t42#iefix")
       format("embedded-opentype"),
-    url("../iconfonts/fonts/icomoon.ttf?p9oo47") format("truetype"),
-    url("../iconfonts/fonts/icomoon.woff?p9oo47") format("woff"),
-    url("../iconfonts/fonts/icomoon.svg?p9oo47#icomoon") format("svg");
+    url("../iconfonts/fonts/icomoon.ttf?cd2t42") format("truetype"),
+    url("../iconfonts/fonts/icomoon.woff?cd2t42") format("woff"),
+    url("../iconfonts/fonts/icomoon.svg?cd2t42#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -27,6 +27,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-location:before {
+  content: "\e979";
+  color: #4e3487;
+}
+.icon-wallet:before {
+  content: "\e97a";
+  color: #4e3487;
+}
 .icon-balance .path1:before {
   content: "\e900";
   color: rgb(46, 133, 170);
@@ -69,7 +77,6 @@
 }
 .icon-arrow-right:before {
   content: "\e908";
-  color: #272727;
 }
 .icon-desktop .path1:before {
   content: "\e909";
