--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,15 +22,16 @@ body {
   overflow: hidden;
 }
 
+/* HEADER AND FOOTER CONTAINER*/
+
 .container {
-  /* HEADER AND FOOTER CONTAINER*/
   max-width: 1920px;
   margin: 0 auto;
   padding: 0 80px;
 }
 
+/* CONTENT PAGE CONTAINER*/
 .container-small {
-  /* CONTENT PAGE CONTAINER*/
   max-width: 1170px;
   margin: 0 auto;
 }
@@ -640,6 +641,7 @@ body {
 }
 
 /*-------END VACANCIES BLOCK -------*/
+
 /*-------NEW VACANCIES BLOCK -------*/
 
 .new-vacancies-wrap {
@@ -718,7 +720,8 @@ body {
 }
 
 /*------- END NEW VACANCIES BLOCK -------*/
-/*------- Achivements BLOCK -------*/
+
+/*------- ACHIVEMENTS BLOCK -------*/
 
 .achievements {
   margin-bottom: 80px;
@@ -767,7 +770,7 @@ body {
   line-height: 31px;
   color: #ffffff;
 }
-/*------- END Achivements BLOCK -------*/
+/*------- END ACHIVEMENTS BLOCK -------*/
 
 /*------- PARTNERS BLOCK -------*/
 
