--- a/styles/antalicons.css
+++ b/styles/antalicons.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "icomoon";
-  src: url("../iconfonts/fonts/icomoon.eot?cd2t42");
-  src: url("../iconfonts/fonts/icomoon.eot?cd2t42#iefix")
+  src: url("../iconfonts/fonts/icomoon.eot?phct1r");
+  src: url("../iconfonts/fonts/icomoon.eot?phct1r#iefix")
       format("embedded-opentype"),
-    url("../iconfonts/fonts/icomoon.ttf?cd2t42") format("truetype"),
-    url("../iconfonts/fonts/icomoon.woff?cd2t42") format("woff"),
-    url("../iconfonts/fonts/icomoon.svg?cd2t42#icomoon") format("svg");
+    url("../iconfonts/fonts/icomoon.ttf?phct1r") format("truetype"),
+    url("../iconfonts/fonts/icomoon.woff?phct1r") format("woff"),
+    url("../iconfonts/fonts/icomoon.svg?phct1r#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -27,6 +27,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-menu-arr:before {
+  content: "\e934";
+}
 .icon-location:before {
   content: "\e979";
   color: #4e3487;
@@ -291,9 +294,6 @@
 .icon-linkedin:before {
   content: "\e933";
   color: #0a66c2;
-}
-.icon-menu-arrow:before {
-  content: "\e934";
 }
 .icon-money .path1:before {
   content: "\e935";
