--- a/styles/styles.css
+++ b/styles/styles.css
@@ -777,9 +777,11 @@ body {
 /*------- END ACHIVEMENTS BLOCK -------*/
 
 /*------- PARTNERS BLOCK -------*/
-
-.partners-wrap-slider {
-  overflow: hidden;
+.partners {
+  margin-bottom: 80px;
+}
+.partner-blocks {
+  display: flex;
 }
 
 .partner-block {
@@ -795,22 +797,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-}
-
-.slider__control {
-  position: absolute;
-  top: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 50px;
-  color: #fff;
-  text-align: center;
-  background: rgb(0 0 0 / 20%);
-  border: none;
-  transform: translateY(-50%);
-  cursor: pointer;
 }
 
 .partner-block:nth-child(even) {
@@ -842,4 +828,65 @@ body {
   color: #272727;
 }
 
-/*------- END PARTNERS BLOCK -------*/
+.partners-btn-wrap {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+/*------- REVIEWS BLOCK -------*/
+
+.reviews-blocks {
+  display: flex;
+}
+
+.reviews-block {
+  background: #f6f6f6;
+  box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  padding: 40px;
+  margin-right: 20px;
+  flex: 0 0 33.33333%;
+  max-width: 33.33333%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.reviews-logo-title {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.customer-foto {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin-right: 20px;
+}
+
+.customer-name {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 29px;
+  color: #272727;
+}
+
+.customer-desc {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #555555;
+}
+
+.customer-desc-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: #272727;
+  height: 250px;
+  overflow: hidden;
+}
+/*------- END REVIEWS BLOCK -------*/
