--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,6 +34,7 @@ body {
 .container-small {
   max-width: 1180px;
   margin: 0 auto;
+  padding: 0 40px;
 }
 
 .white-btn {
@@ -346,6 +347,7 @@ body {
 
 .activities-wrapper {
   display: flex;
+  gap: 20px;
 }
 
 .h1-title {
@@ -390,12 +392,11 @@ body {
 }
 
 .activities-left-col {
-  margin-right: 20px;
-  width: 66%;
+  width: calc(66% - 10px);
 }
 
 .activities-right-col {
-  width: 34%;
+  width: calc(34% - 10px);
 }
 
 .lists-block-left {
@@ -532,17 +533,23 @@ body {
 }
 .form-field-white {
   padding: 15px 46px 15px 15px;
-  gap: 10px;
-  width: 410px;
   height: 52px;
   border: 2px solid #ffffff;
   border-radius: 5px;
-  margin-right: 20px;
   color: #ffffff;
 }
 
 .find-spec-form {
   display: flex;
+  gap: 20px;
+}
+
+.find-spec-field {
+  width: calc(33.33% - 10px);
+}
+
+.find-spec-btn {
+  width: calc(33.33% - 10px);
 }
 
 .bottom-desc-small {
@@ -562,7 +569,6 @@ body {
 
 .industries-wrap {
   display: flex;
-  min-height: 1020px;
   gap: 50px;
 }
 .industries-title-col {
@@ -641,7 +647,7 @@ body {
 }
 
 .find-vacancies-right-block {
-  width: calc(50%-40px);
+  width: calc(50% - 40px);
 }
 
 .find-vacancies-desc {
@@ -658,14 +664,19 @@ body {
   flex-direction: column;
 }
 
-.find-vacancy-form input {
+.find-vacancy-field {
   margin-bottom: 20px;
+  width: 100%;
+}
+
+.find-vacancy-btn {
+  width: 100%;
 }
 
 .find-vacancies-right-image {
   background-image: url("../images/find-vacancy.jpg");
   background-repeat: no-repeat;
-  width: 450px;
+  width: calc(50% - 80px);
   height: 100%;
   background-size: cover;
   border-radius: 10px;
@@ -763,7 +774,6 @@ body {
   background: linear-gradient(79.84deg, #2e85aa -6.98%, #4e3487 105.43%);
   box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  height: 511px;
   width: 100%;
   padding: 40px;
 }
@@ -779,13 +789,13 @@ body {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+  gap: 60px;
 }
 .achivements-step {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-right: 21px;
-  width: 31.4%;
+  width: calc(33.33% - 60px);
 }
 .achiv-step-title {
   font-weight: 400;
@@ -815,7 +825,7 @@ body {
   box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   padding: 40px;
-  width: calc(50%-10px);
+  width: calc(50% - 10px);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -979,7 +989,6 @@ body {
 .footer-wrap {
   display: flex;
   flex-direction: column;
-  height: 413px;
   width: 100%;
   background: #272727;
   box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.2);
@@ -994,7 +1003,6 @@ body {
 
 .footer-menu-wrap {
   display: flex;
-  flex-direction: row;
 }
 
 .footer-title {
