--- a/styles/styles.css
+++ b/styles/styles.css
@@ -375,17 +375,12 @@ body {
   cursor: pointer;
 }
 
-/* .activities-list-item:hover {
-  padding-left: 10px;
-} */
-
 .activities-col {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 40px 80px 40px 40px;
   gap: 10px;
-  height: 249px;
   background: #f6f6f6;
   box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
@@ -789,13 +784,14 @@ body {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  gap: 60px;
+  gap: 20px;
+  align-items: baseline;
 }
 .achivements-step {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: calc(33.33% - 60px);
+  width: calc(33.33% - 20px);
 }
 .achiv-step-title {
   font-weight: 400;
@@ -808,6 +804,7 @@ body {
   font-size: 24px;
   line-height: 31px;
   color: #ffffff;
+  word-break: break-word;
 }
 /*------- END ACHIVEMENTS BLOCK -------*/
 
@@ -950,7 +947,7 @@ body {
 
 .article-top-block {
   display: flex;
-  align-items: flex-start;
+  align-items: baseline;
   justify-content: space-between;
 }
 .article-block-btm-wrap {
@@ -965,7 +962,9 @@ body {
   color: #272727;
   width: 80%;
 }
-
+.article-date {
+  font-size: 14px;
+}
 .article-desc-wrap {
   width: 80%;
   margin-top: 22px;
