--- a/styles/media.css
+++ b/styles/media.css
@@ -407,6 +407,23 @@
   .vacancy-title {
     font-size: 28px;
   }
+
+  .articles-wrap {
+    display: flex;
+    margin-bottom: 30px;
+    gap: 20px;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.article-block {
+  width: 100%;
+
+}
+
+.article-block:last-child{
+  display: none;
+
 }
 
 @media (max-width: 320px) {
@@ -416,4 +433,6 @@
   .spec-find-text {
     width: 100%;
   }
+
+  
 }
