--- a/styles/media.css
+++ b/styles/media.css
@@ -306,7 +306,8 @@
   .footer-socials-btn {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
+    margin-top: 20px;
   }
 
   .footer-social-item {
@@ -453,6 +454,10 @@
     flex-direction: column;
   }
 
+  .block-arrow {
+    font-size: 26px;
+  }
+
   .activities-list li {
     font-size: 16px;
   }
@@ -535,12 +540,14 @@
     margin-top: 60px;
   }
 
-  .footer{
+  .footer {
     margin-top: 60px;
   }
+
   .city-salary > span {
     font-size: 14px;
   }
+
   .footer-wrap {
     padding: 40px;
   }
