--- a/styles/styles.css
+++ b/styles/styles.css
@@ -364,6 +364,7 @@ body {
 .activities-wrapper {
   display: flex;
   gap: 20px;
+  margin-top: 20px;
 }
 
 .h1-title {
@@ -450,6 +451,8 @@ body {
   display: flex;
   flex-direction: row;
   margin-bottom: 80px;
+  margin-top: 20px;
+
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 20px;
