--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,14 @@ body {
   font-family: "Calibri";
 }
 
+.form-text-field:focus::placeholder {
+  opacity: 0;
+}
+.form-text-field::placeholder {
+  color: #ffffff;
+}
+
+
 .vacancy-location {
   font-family: "Calibri" !important;
 }
@@ -67,6 +75,20 @@ body {
   line-height: 22px;
 }
 
+.white-btn:hover {
+  padding: 15px 45px;
+  gap: 10px;
+  background: #eae6f3 !important;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #4e3487;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+}
+
 .violet-btn {
   padding: 15px 45px;
   gap: 10px;
@@ -82,6 +104,20 @@ body {
   font-size: 18px;
   line-height: 22px;
 }
+
+.violet-btn:hover {
+  padding: 15px 45px; 
+  background: #6b51a5!important;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+}
+
 
 /*------- HEADER BLOCK -------*/
 
@@ -271,6 +307,20 @@ body {
   padding: 15px 30px;
   text-decoration: none;
   margin-bottom: 11px;
+}
+
+.request-button a:hover {
+  width: 213px;
+  height: 52px;
+  display: inline-block;
+  font-size: 18px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 15px 30px;
+  text-decoration: none;
+  margin-bottom: 11px;
+  background-color: #4e3487;
+  color: #ffffff;
 }
 
 .antal-links {
@@ -468,6 +518,7 @@ body {
   font-size: 48px;
   line-height: 38px;
   margin-bottom: 20px;
+  display: flex;
 }
 .step-desc-white {
   font-weight: 400;
@@ -515,6 +566,7 @@ body {
   line-height: 38px;
   color: #272727;
   margin-bottom: 20px;
+  display: flex;
 }
 
 .step-desc {
@@ -551,6 +603,7 @@ body {
   line-height: 53px;
   color: #ffffff;
   margin-bottom: 10px;
+  display: flex;
 }
 .spec-find-desc {
   font-weight: 400;
